# movie-chatbot

./: .gitignore  .replit  MergeAndCleaned_Movies.csv  README.md  advanced_movie_chat.py  app.py  clean_app.py  clustering_utils.py  config_example.py  flask_routes.py  index.html  movie_chat.py  movie_chat_fixed.py  movie_chat_restored.py  movie_recommender.py  movie_recommender_complete.py  movie_utils.py  movies_clean.csv  movies_clean_utf8.csv  new_movies_data.csv  project_requirements.txt  pyproject.toml  render.yaml  requirements.txt  sample_movies.csv  simple_app.py  simple_movie_chat.py  structured_app.py  watchlist.db  watchlist_db.py
attached_assets/: MergeAndCleaned_Movies_1749138860603.csv  Pasted--1-Genre-gen-1749337788834_1749337788838.txt  Pasted--AI--1749418035641_1749418035644.txt  Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta-name-viewport-con-1749328460920_1749328460921.txt  Pasted--Supabase-const-SUPABASE-URL-https-iasbfrurebekgtrhiimh-supabase-co--1749318781167_1749318781170.txt  Pasted-from-flask-import-Flask-render-template-request-jsonify-session-import-pandas-as-pd-import-jso-1749294688116_1749294688119.txt  Pasted-from-flask-import-Flask-render-template-request-jsonify-session-import-pandas-as-pd-import-jso-1749321334716_1749321334718.txt  Pasted-from-flask-import-Flask-render-template-request-jsonify-session-import-pandas-as-pd-import-jso-1749328452700_1749328452702.txt  Pasted-from-flask-import-Flask-render-template-request-jsonify-session-import-pandas-as-pd-import-json--1749339176921_1749339176925.txt  (+1 more)
templates/: index.html
