[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.52.2",
    "flask-limiter>=3.12",
    "flask>=3.1.1",
    "google-generativeai>=0.8.5",
    "openai>=1.84.0",
    "pandas>=2.3.0",
    "streamlit>=1.45.1",
    "scikit-learn>=1.7.0",
    "numpy>=2.2.6",
]
